More to-do comments.

--- a/handwritten_digits.ipynb
+++ b/handwritten_digits.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "91fc100c",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
    "source": [
     "\n",
     "training_set = (X_train_standard,y_train)\n",
-    "validation_set = (X_val, y_val)\n",
+    "validation_set = (X_val, y_val) # Probably need to standardize these\n",
     "feedforward_model.train_loop(training_set, validation_set, 1, 32)"
    ]
   },
