End-to-end result.

--- a/handwritten_digits.ipynb
+++ b/handwritten_digits.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "68edeefc",
    "metadata": {},
    "outputs": [],
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "5e9455f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1162feed0>"
+       "<matplotlib.image.AxesImage at 0x312125790>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "3c1b73ed",
    "metadata": {},
    "outputs": [],
@@ -178,12 +178,14 @@
     "from mnist_neural_net import ImageNeuralNet, ModelTraining\n",
     "import os\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.optim as optim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "d8d20938",
    "metadata": {},
    "outputs": [],
@@ -208,15 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a101340a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standardized with mean: 33.31 and std: 78.56\n",
+      "Standardized with mean: 33.36 and std: 78.61\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_val, y_train, y_val = split(train_images, train_labels, 0.2)\n",
     "\n",
-    "#X_train= standardize_data(X_train)\n",
-    "#_val = standardize_data(X_val)\n",
+    "X_train= standardize_data(X_train)\n",
+    "X_val = standardize_data(X_val)\n",
     "\n",
     "X_train = convert_numpy_to_flatten_tensor(X_train)\n",
     "X_val = convert_numpy_to_flatten_tensor(X_val)\n",
@@ -229,35 +240,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "8a71f385",
+   "execution_count": 31,
+   "id": "ef97f66d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-       "        [0., 0., 0.,  ..., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train\n"
+    "image_numbers = [0,1,2,3,4,5,6,7,8,9]\n",
+    "image_identity = torch.eye(len(image_numbers))\n",
+    "\n",
+    "temp_matrix = {}\n",
+    "for i,image_num in enumerate(image_numbers):\n",
+    "    temp_matrix[image_num] = image_identity[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "3d9cbfdd",
+   "execution_count": 32,
+   "id": "8a71f385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_one_hot= torch.zeros((y_train.shape[0],10))\n",
+    "y_val_one_hot = torch.zeros((y_val.shape[0],10))\n",
+    "for i, y_value in enumerate(y_train):\n",
+    "    y_train_one_hot[i] = temp_matrix.get(y_value.item())\n",
+    "for i, y_value in enumerate(y_val):\n",
+    "    y_val_one_hot[i] = temp_matrix.get(y_value.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b3c94ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +284,7 @@
     "        self.relu2 = nn.ReLU()\n",
     "        self.fc3 = nn.Linear(128,64)\n",
     "        self.relu3 = nn.ReLU()\n",
-    "        self.output_layer = nn.Linear(64,10) \n",
+    "        self.output_layer = nn.Linear(64,1) \n",
     "\n",
     "    def forward(self, image):\n",
     "        x = self.relu1(self.fc1(image))\n",
@@ -283,27 +297,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "f702f296",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "\n",
     "mps_device = torch.device(\"mps\")\n",
     "image_pixels = 28*28\n",
     "model = ImageNeuralNet(image_pixels).to(mps_device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "loss_function = nn.CrossEntropyLoss()\n",
+    "loss_function = nn.BCEWithLogitsLoss()\n",
     "\n",
     "#feedforward_model = ModelTraining(model,optimizer,loss_function)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "91fc100c",
    "metadata": {},
    "outputs": [],
@@ -318,23 +328,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "f6c2cd35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "973c03cd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "0D or 1D target tensor expected, multi-target not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 24\u001b[39m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Forward pass.\u001b[39;00m\n\u001b[32m     23\u001b[39m y_pred = model(X_train) \u001b[38;5;66;03m# Makes prediction with X data\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m loss = \u001b[43mloss_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#Calculates Loss (y_pred - y_true)\u001b[39;00m\n\u001b[32m     25\u001b[39m \u001b[38;5;28mprint\u001b[39m(loss)\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# Backward pass and optimization\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/modules/module.py:1775\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1773\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1774\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1775\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/modules/module.py:1786\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1781\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1782\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1783\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1784\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1785\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1786\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1788\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1789\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/modules/loss.py:1385\u001b[39m, in \u001b[36mCrossEntropyLoss.forward\u001b[39m\u001b[34m(self, input, target)\u001b[39m\n\u001b[32m   1383\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor, target: Tensor) -> Tensor:\n\u001b[32m   1384\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Runs the forward pass.\"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1385\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1386\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   1387\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1388\u001b[39m \u001b[43m        \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1389\u001b[39m \u001b[43m        \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1390\u001b[39m \u001b[43m        \u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1391\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1392\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/functional.py:3458\u001b[39m, in \u001b[36mcross_entropy\u001b[39m\u001b[34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[39m\n\u001b[32m   3456\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   3457\u001b[39m     reduction = _Reduction.legacy_get_string(size_average, reduce)\n\u001b[32m-> \u001b[39m\u001b[32m3458\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_C\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_nn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcross_entropy_loss\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   3459\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   3460\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3461\u001b[39m \u001b[43m    \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3462\u001b[39m \u001b[43m    \u001b[49m\u001b[43m_Reduction\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_enum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3463\u001b[39m \u001b[43m    \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3464\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3465\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mRuntimeError\u001b[39m: 0D or 1D target tensor expected, multi-target not supported"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "Train Loss: -731697761.2653501\n",
+      "\n",
+      "Epoch 2\n",
+      "Train Loss: -17111303957.674667\n",
+      "\n",
+      "Epoch 3\n",
+      "Train Loss: -86214630558.37866\n",
+      "\n",
+      "Epoch 4\n",
+      "Train Loss: -247135937314.816\n",
+      "\n",
+      "Epoch 5\n",
+      "Train Loss: -539934765875.2\n",
+      "\n"
      ]
     }
    ],
@@ -348,7 +385,7 @@
     "\n",
     "    # Training\n",
     "    total_loss = 0\n",
-    "    dataset_size = len(training_set)\n",
+    "    dataset_size = len(training_set[0])\n",
     "    images, labels = training_set\n",
     "    model.train()\n",
     "    for i in range(0, dataset_size, batch_size):\n",
@@ -359,13 +396,15 @@
     "\n",
     "        X_train = images[start:end].to(torch.device(\"mps\"))\n",
     "        y_train = labels[start:end].to(torch.device(\"mps\"))\n",
+    "        \n",
     "        # Forward pass.\n",
+    "        y_pred = model(X_train) # Makes prediction with X data\n",
+    "        #predicted_probabilities = nn.Softmax(dim=1)(logits) #\n",
+    "        #y_pred = predicted_probabilities.argmax(1)\n",
+    "        #print(y_pred.dtype)\n",
+    "        #y_pred = y_pred.reshape((32,1))\n",
     "\n",
-    "        logits = model(X_train) # Makes prediction with X data\n",
-    "        predicted_probabilities = nn.Softmax(dim=1)(logits) #\n",
-    "        y_pred = predicted_probabilities.argmax(1)\n",
     "        loss = loss_function(y_pred, y_train) #Calculates Loss (y_pred - y_true)\n",
-    "        print(loss)\n",
     "        # Backward pass and optimization\n",
     "        optimizer.zero_grad() # Reset the gradients of all optimized\n",
     "        loss.backward() # Computes the gradeint of current tensor wrt graph leaves\n",
@@ -378,37 +417,38 @@
     "        total_loss += loss.item()\n",
     "\n",
     "    # Evaluation\n",
-    "    model.eval()\n",
-    "    val_set_size = len(val_set)\n",
-    "    v_images, v_labels = val_set\n",
-    "    v_total_loss = 0\n",
-    "    with torch.no_grad():\n",
-    "        for i in range(0, val_set_size, batch_size):\n",
-    "            if (i == val_set_size - 1) and (val_set_size % batch_size != 0):\n",
-    "                batch_size = val_set_size % batch_size\n",
-    "                X_val = v_images[start:end]\n",
-    "                y_val = v_labels[start:end]\n",
-    "                \n",
-    "                y_val_pred = model(X_val)\n",
-    "                loss = loss_function(y_val_pred, y_val)\n",
-    "                v_total_loss += loss\n",
+    "    #model.eval()\n",
+    "    #val_set_size = len(val_set)\n",
+    "    #v_images, v_labels = val_set\n",
+    "    #v_total_loss = 0\n",
+    "    #with torch.no_grad():\n",
+    "    #    for i in range(0, val_set_size, batch_size):\n",
+    "    #        if (i == val_set_size - 1) and (val_set_size % batch_size != 0):\n",
+    "    #            batch_size = val_set_size % batch_size\n",
+    "    #            X_val = v_images[start:end]\n",
+    "    #            y_val = v_labels[start:end]\n",
+    "    #            \n",
+    "    #            y_val_pred = model(X_val)\n",
+    "    #            y_val_pred.shape\n",
+    "    #            loss = loss_function(y_val_pred, y_val)\n",
+    "    #            v_total_loss += loss\n",
     "    \n",
     "\n",
     "    average_train_loss = total_loss / dataset_size\n",
-    "    average_val_loss = v_total_loss/ val_set_size\n",
+    "    #average_val_loss = v_total_loss/ val_set_size\n",
     "\n",
     "    train_list.append(average_train_loss)\n",
-    "    validation_list.append(average_val_loss)\n",
+    "    #validation_list.append(average_val_loss)\n",
     "\n",
-    "    if average_val_loss <= best_val_loss:\n",
-    "        best_val_loss = average_train_loss\n",
-    "        best_model = model\n",
+    "    #if average_val_loss <= best_val_loss:\n",
+    "    #    best_val_loss = average_train_loss\n",
+    "    #    best_model = model\n",
     "        #self.best_metrics = (epoch, y_val, y_val_pred)\n",
     "\n",
-    "    #print(f\"Epoch {epoch + 1}\")\n",
-    "    #print(f\"Train Loss: {train_list[-1]}\")\n",
+    "    print(f\"Epoch {epoch + 1}\")\n",
+    "    print(f\"Train Loss: {train_list[-1]}\")\n",
     "    #print(f\"Val Loss: {validation_list[-1]}\")\n",
-    "    #print()\n"
+    "    print()\n"
    ]
   },
   {
