End to end notebook

--- a/handwritten_digits.ipynb
+++ b/handwritten_digits.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "3c1b73ed",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "d8d20938",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "a101340a",
    "metadata": {},
    "outputs": [
@@ -218,8 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Standardized with mean: 33.31 and std: 78.56\n",
-      "Standardized with mean: 33.36 and std: 78.61\n"
+      "Standardized with mean: 33.35 and std: 78.6\n",
+      "Standardized with mean: 33.18 and std: 78.43\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "ef97f66d",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "8a71f385",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "b3c94ad3",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
     "        self.relu2 = nn.ReLU()\n",
     "        self.fc3 = nn.Linear(128,64)\n",
     "        self.relu3 = nn.ReLU()\n",
-    "        self.output_layer = nn.Linear(64,1) \n",
+    "        self.output_layer = nn.Linear(64,10) \n",
     "\n",
     "    def forward(self, image):\n",
     "        x = self.relu1(self.fc1(image))\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "f702f296",
    "metadata": {},
    "outputs": [],
@@ -306,20 +306,20 @@
     "image_pixels = 28*28\n",
     "model = ImageNeuralNet(image_pixels).to(mps_device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "loss_function = nn.BCEWithLogitsLoss()\n",
+    "loss_function = nn.CrossEntropyLoss()\n",
     "\n",
     "#feedforward_model = ModelTraining(model,optimizer,loss_function)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "91fc100c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_set = (X_train,y_train)\n",
-    "val_set = (X_val, y_val) \n",
+    "training_set = (X_train,y_train_one_hot)\n",
+    "val_set = (X_val, y_val_one_hot) \n",
     "\n",
     "epochs = 5\n",
     "batch_size = 32\n",
@@ -328,23 +328,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "f6c2cd35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32"
+       "12000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "batch_size"
+    "len(val_set[0])"
    ]
   },
   {
@@ -354,24 +354,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1\n",
-      "Train Loss: -731697761.2653501\n",
-      "\n",
-      "Epoch 2\n",
-      "Train Loss: -17111303957.674667\n",
-      "\n",
-      "Epoch 3\n",
-      "Train Loss: -86214630558.37866\n",
-      "\n",
-      "Epoch 4\n",
-      "Train Loss: -247135937314.816\n",
-      "\n",
-      "Epoch 5\n",
-      "Train Loss: -539934765875.2\n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "Expected input batch_size (32) to match target batch_size (12000).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[32m     49\u001b[39m         y_val = v_labels[start:end].to(torch.device(\u001b[33m\"\u001b[39m\u001b[33mmps\u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m     51\u001b[39m         y_val_pred = model(X_val)\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m         loss = \u001b[43mloss_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_val_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_val_one_hot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     53\u001b[39m         v_total_loss += loss\n\u001b[32m     56\u001b[39m average_train_loss = total_loss / dataset_size\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/modules/module.py:1775\u001b[39m, in \u001b[36mModule._wrapped_call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1773\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._compiled_call_impl(*args, **kwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[32m   1774\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1775\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/modules/module.py:1786\u001b[39m, in \u001b[36mModule._call_impl\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1781\u001b[39m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[32m   1782\u001b[39m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[32m   1783\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m._backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m._forward_pre_hooks\n\u001b[32m   1784\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[32m   1785\u001b[39m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[32m-> \u001b[39m\u001b[32m1786\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1788\u001b[39m result = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1789\u001b[39m called_always_called_hooks = \u001b[38;5;28mset\u001b[39m()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/modules/loss.py:1385\u001b[39m, in \u001b[36mCrossEntropyLoss.forward\u001b[39m\u001b[34m(self, input, target)\u001b[39m\n\u001b[32m   1383\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor, target: Tensor) -> Tensor:\n\u001b[32m   1384\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Runs the forward pass.\"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1385\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1386\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   1387\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1388\u001b[39m \u001b[43m        \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1389\u001b[39m \u001b[43m        \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1390\u001b[39m \u001b[43m        \u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1391\u001b[39m \u001b[43m        \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1392\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Projects/handwritten-digit-recognizer/digits/lib/python3.12/site-packages/torch/nn/functional.py:3458\u001b[39m, in \u001b[36mcross_entropy\u001b[39m\u001b[34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[39m\n\u001b[32m   3456\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   3457\u001b[39m     reduction = _Reduction.legacy_get_string(size_average, reduce)\n\u001b[32m-> \u001b[39m\u001b[32m3458\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_C\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_nn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcross_entropy_loss\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   3459\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m   3460\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3461\u001b[39m \u001b[43m    \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3462\u001b[39m \u001b[43m    \u001b[49m\u001b[43m_Reduction\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_enum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3463\u001b[39m \u001b[43m    \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3464\u001b[39m \u001b[43m    \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   3465\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: Expected input batch_size (32) to match target batch_size (12000)."
      ]
     }
    ],
@@ -398,12 +392,7 @@
     "        y_train = labels[start:end].to(torch.device(\"mps\"))\n",
     "        \n",
     "        # Forward pass.\n",
-    "        y_pred = model(X_train) # Makes prediction with X data\n",
-    "        #predicted_probabilities = nn.Softmax(dim=1)(logits) #\n",
-    "        #y_pred = predicted_probabilities.argmax(1)\n",
-    "        #print(y_pred.dtype)\n",
-    "        #y_pred = y_pred.reshape((32,1))\n",
-    "\n",
+    "        y_pred = model(X_train)\n",
     "        loss = loss_function(y_pred, y_train) #Calculates Loss (y_pred - y_true)\n",
     "        # Backward pass and optimization\n",
     "        optimizer.zero_grad() # Reset the gradients of all optimized\n",
@@ -417,37 +406,39 @@
     "        total_loss += loss.item()\n",
     "\n",
     "    # Evaluation\n",
-    "    #model.eval()\n",
-    "    #val_set_size = len(val_set)\n",
-    "    #v_images, v_labels = val_set\n",
-    "    #v_total_loss = 0\n",
-    "    #with torch.no_grad():\n",
-    "    #    for i in range(0, val_set_size, batch_size):\n",
-    "    #        if (i == val_set_size - 1) and (val_set_size % batch_size != 0):\n",
-    "    #            batch_size = val_set_size % batch_size\n",
-    "    #            X_val = v_images[start:end]\n",
-    "    #            y_val = v_labels[start:end]\n",
-    "    #            \n",
-    "    #            y_val_pred = model(X_val)\n",
-    "    #            y_val_pred.shape\n",
-    "    #            loss = loss_function(y_val_pred, y_val)\n",
-    "    #            v_total_loss += loss\n",
+    "    model.eval()\n",
+    "    val_set_size = len(val_set[0])\n",
+    "    v_images, v_labels = val_set\n",
+    "    v_total_loss = 0\n",
+    "    with torch.no_grad():\n",
+    "        for i in range(0, val_set_size, batch_size):\n",
+    "            if (i == val_set_size - 1) and (val_set_size % batch_size != 0):\n",
+    "                print('HERE')\n",
+    "                batch_size = val_set_size % batch_size\n",
+    "            start = i\n",
+    "            end = i + batch_size\n",
+    "            X_val = v_images[start:end].to(torch.device(\"mps\"))\n",
+    "            y_val = v_labels[start:end].to(torch.device(\"mps\"))\n",
+    "            \n",
+    "            y_val_pred = model(X_val)\n",
+    "            loss = loss_function(y_val_pred, y_val)\n",
+    "            v_total_loss += loss\n",
     "    \n",
     "\n",
     "    average_train_loss = total_loss / dataset_size\n",
-    "    #average_val_loss = v_total_loss/ val_set_size\n",
+    "    average_val_loss = v_total_loss/ val_set_size\n",
     "\n",
     "    train_list.append(average_train_loss)\n",
-    "    #validation_list.append(average_val_loss)\n",
+    "    validation_list.append(average_val_loss)\n",
     "\n",
-    "    #if average_val_loss <= best_val_loss:\n",
-    "    #    best_val_loss = average_train_loss\n",
-    "    #    best_model = model\n",
+    "    if average_val_loss <= best_val_loss:\n",
+    "        best_val_loss = average_train_loss\n",
+    "        best_model = model\n",
     "        #self.best_metrics = (epoch, y_val, y_val_pred)\n",
     "\n",
     "    print(f\"Epoch {epoch + 1}\")\n",
     "    print(f\"Train Loss: {train_list[-1]}\")\n",
-    "    #print(f\"Val Loss: {validation_list[-1]}\")\n",
+    "    print(f\"Val Loss: {validation_list[-1]}\")\n",
     "    print()\n"
    ]
   },
